2000-01-13  Havoc Pennington  <hp@redhat.com>

	* gnomelib-init2.c (gnome_program_module_register): Dump
	bad-module-version message to stderr instead of stdout, and 
	then exit(1) (we can't really continue, it will segfault
	most of the time no doubt)
	(gnome_program_version_check): reverse the version args 
	to rpmvercmp

Thu Jan 13 14:49:03 2000  George Lebl <jirka@5z.com>

	* gnome-i18n.c: fixup the inline doc to be more clear that the
	  list returned from gnome_i18n_get_language_list should not be
	  freed at all.

2000-01-11  Havoc Pennington  <hp@pobox.com>

	* gnomelib-init.c: move human readable name stuff into 
	libgnome init files.

2000-01-11  Havoc Pennington  <hp@redhat.com>

	* gnomelib-init2.c: Add GNOME_PARAM_HUMAN_READABLE_NAME
	(gnome_program_get_human_readable_name): convenience function 
	to get it

Sat Jan 08 19:06:47 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]:  Switch exec from a vector to a simple string.
	  change the _get_command and _set_command to return/take a simple
	  string.  Also changed reading of .order file to not use a fixed
	  buffer for reading.

Sat Jan 01 18:45:26 2000  George Lebl <jirka@5z.com>

	* gnome-config.c,gnome-help.c,gnome-mime-info.c: Use LC_MESSAGES
	  instead of LC_ALL to get the language to use for translating
	  messages.  LC_ALL is used as well inside gnome-i18n anyway
	  and messages need to use LC_MESSAGES if it's set

	* gnome-help.c: s/g_fee/g_free/ in the inline docs for two functions

1999-12-23  Havoc Pennington  <hp@redhat.com>

	* gnomelib-init.c (libgnome_userdir_setup): Clean up this
	code. Include strerror() in error messages, don't dump core (just
	fprintf() then exit(1)), indent reasonably, don't use -1 as a
	truth value.

1999-12-21  Havoc Pennington  <hp@redhat.com>

	* gnome-ditem.c: new functions to get the best comment/name to
	display to the current user (by locale list).

Wed Dec 15 14:15:37 1999  George Lebl <jirka@5z.com>
